# rag_chat_ui

./: Dockerfile  README.md  pyproject.toml  requirements.txt
config/: config.yaml
src/chat_ui/: init_flask_app.py  main.py
src/chat_ui/output_utils/: speaking.py
src/chat_ui/routes/: login_routes.py  register_routes.py  startpage_routes.py
src/chat_ui/static/css/: css_styles.css  ie10.css  signin.css
src/chat_ui/static/js/: login.js  startpage.js
src/chat_ui/templates/: _layout.html  login.html  register.html  startpage.html
